--- a/public/template/assets/css/style.css
+++ b/public/template/assets/css/style.css
@@ -1371,11 +1371,12 @@ section {
 # Login
 --------------------------------------------------------------*/
 .card-login{
-  background-color: grey;
+  background-color:	 #bfbfbf;
   width: 50%;
   color:black;
   padding: 20px;
   margin: 100px;
+  opacity: 0.9;
 }
 
 
@@ -1531,4 +1532,18 @@ section {
   text-align: center;
   font-size: 13px;
   color: #fff;
+}
+
+
+#login, #register {
+  width: 100%;
+  height: 100%;
+  background: url("../../../image/home.jpg") top center;
+  background-size: cover;
+  position: relative;
+  padding: 0;
+}
+
+.login-form{
+  opacity: 0.6;
 }
