--- a/public/template/assets/css/style.css
+++ b/public/template/assets/css/style.css
@@ -715,7 +715,7 @@ section {
 /*--------------------------------------------------------------
 # About
 --------------------------------------------------------------*/
-#about .container {
+#about .container-about {
   padding-top: 50px;
 }
 
@@ -862,7 +862,7 @@ section {
 /*--------------------------------------------------------------
 # Menu Section
 --------------------------------------------------------------*/
-#menu .container {
+#menu .container-menu {
   padding-top: 70px;
 }
 
@@ -1202,7 +1202,7 @@ section {
 /*--------------------------------------------------------------
 # Gallery
 --------------------------------------------------------------*/
-#gallery .container {
+#gallery .container-gallery {
   padding-top: 70px;
 }
 
@@ -1224,7 +1224,7 @@ section {
 /*--------------------------------------------------------------
 # Contact
 --------------------------------------------------------------*/
-#contact .container {
+#contact .container-contact {
   padding-top: 70px;
 } 
 .contact .info {
