--- a/public/template/assets/css/style.css
+++ b/public/template/assets/css/style.css
@@ -1555,7 +1555,7 @@ section {
 }
 
 
-#login, #register {
+#login, #register,#form-email, #reset {
   width: 100%;
   height: 100%;
   background: url("../../../image/home.jpg") top center;
@@ -1566,4 +1566,21 @@ section {
 
 .login-form{
   opacity: 0.6;
+}
+
+.card-email, .card-reset{
+  background-color:	 #bfbfbf;
+  width: 80%;
+  color:black;
+  padding: 20px;
+  margin: 100px;
+  opacity: 0.9;
+}
+
+#form-email button{
+  margin:20px;
+}
+
+#reset input{
+  margin:10px;
 }
