--- a/public/template/assets/css/style.css
+++ b/public/template/assets/css/style.css
@@ -233,7 +233,7 @@ h1, h2, h3, h4, h5, h6 {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 10px 0 10px 30px;
+  padding: 8px 25px 8px 25px;
   color: #fff;
   white-space: nowrap;
   transition: 0.3s;
